# Secure_MAVLink_Gateway

./: .gitignore  .gitmodules  ArduPilot_SITL_with_RPI4.md  CMakeLists.txt  README.md  main.c  mavlink_msg_capture.py
dronekit_code/: README.md  battery_fence.py  demo_combined.py  demo_step1_fly_plane.py  demo_step2_wp_change_and_disable_fence.py  fence.txt  util.py
inc/baremetal/: math.h  stdbool.h  stdint.h  stdio.h  string.h
lib/: context.h  log_ringleader.c  ring_buffer.h  route_table.c  secure_gateway.c  secure_gateway.h  security_policies.c  source_certikos_uart.c  source_partee.c  source_ringleader.c  source_stdio.c  source_tcp.c  source_tcpout.c  source_thinros_certikos.c  source_uart.c  source_udp.c  transformer_none.c  transformer_xor.c
lib/plugins/: console.c
test/: .gitignore  main-dump.c  main-sim.c  main-xor.c  mavlink_msg_capture.py  mavlink_msg_header.py  mavlink_msg_replay.py
test/dronekit_code/: README.md  demo_step2_wp_change_and_disable_fence.py  fly_out_of_geofence.py  goto.py  mission.txt
test/dronekit_code/copter/: goto.py
tools/: tcp_bridge.cc
